--- a/AssignmentTemplate/Assignment-.tex
+++ b/AssignmentTemplate/Assignment-.tex
@@ -1,6 +1,6 @@
 % !TEX program = pdflatex -> bibtex -> pdflatex*2
 \documentclass{assignment}
-\ProjectInfos{高等热力学与统计物理}{PHYS2110}{2020-2021学年第二学期}{第次作业}{截止时间：2021. . （周二）}{陈稼霖}{45875852}
+\ProjectInfos{高等热力学与统计物理}{PHYS2110}{2020-2021学年第二学期}{习题 }{截止时间：2021. . （周二）}{陈稼霖}{45875852}
 
 \begin{document}
 \begin{prob}
