--- a/Assignment-1/Assignment-1.tex
+++ b/Assignment-1/Assignment-1.tex
@@ -1,4 +1,3 @@
-% !TEX program = pdflatex -> bibtex -> pdflatex*2
 \documentclass{assignment}
 \ProjectInfos{高等热力学与统计物理}{PHYS2110}{2020-2021学年第二学期}{习题 I}{截止时间：2021. . （周二）}{陈稼霖}{45875852}
 
@@ -25,7 +24,7 @@
         \end{align}
         令上式中 $\mathrm{d}w=0$，得
         \begin{align}
-            \label{1-dx/dy}
+            \label{1-(dx/dy)w}
             \left(\frac{\partial x}{\partial y}\right)_w=-\frac{\left(\frac{\partial w}{\partial y}\right)_x}{\left(\frac{\partial w}{\partial x}\right)_y}.
         \end{align}
         对式 $f(x,y,z)=0$ 取微分，有
@@ -59,7 +58,7 @@
             \label{1-dx/dz}
             \left(\frac{\partial x}{\partial z}\right)_w=\frac{\left(\frac{\partial w}{\partial y}\right)_x\left(\frac{\partial f}{\partial z}\right)_{x,y}}{\left(\frac{\partial w}{\partial x}\right)_y\left(\frac{\partial f}{\partial y}\right)_{x,z}-\left(\frac{\partial w}{\partial y}\right)_x\left(\frac{\partial f}{\partial x}\right)_{y,z}}
         \end{align}
-        式 \eqref{1-dx/dy} 与 \eqref{1-dy/dz} 相乘恰好等于式 \eqref{1-dx/dz}，
+        式 \eqref{1-(dx/dy)w} 与 \eqref{1-dy/dz} 相乘恰好等于式 \eqref{1-dx/dz}，
         \begin{align}
             \left(\frac{\partial x}{\partial y}\right)_w\left(\frac{\partial y}{\partial z}\right)_w=\frac{\left(\frac{\partial w}{\partial y}\right)_x\left(\frac{\partial f}{\partial z}\right)_{x,y}}{\left(\frac{\partial w}{\partial x}\right)_y\left(\frac{\partial f}{\partial y}\right)_{x,z}-\left(\frac{\partial w}{\partial y}\right)_x\left(\frac{\partial f}{\partial x}\right)_{y,z}}=\left(\frac{\partial x}{\partial z}\right)_w,
         \end{align}
