--- a/Assignment-1/Assignment-1.tex
+++ b/Assignment-1/Assignment-1.tex
@@ -42,7 +42,7 @@
         \end{align}
         令上式中 $\mathrm{d}w=0$，得
         \begin{align}
-            \label{1-dy/dz}
+            \label{1-(dy/dz)w}
             \left(\frac{\partial y}{\partial z}\right)_w=\frac{-\left(\frac{\partial w}{\partial x}\right)_y\left(\frac{\partial f}{\partial z}\right)_{x,y}}{\left(\frac{\partial w}{\partial x}\right)_y\left(\frac{\partial f}{\partial y}\right)_{x,z}-\left(\frac{\partial w}{\partial y}\right)_x\left(\frac{\partial f}{\partial x}\right)_{y,z}}.
         \end{align}
         由式 \eqref{1-df}，也可将 $\mathrm{d}y$ 表为
@@ -55,10 +55,10 @@
         \end{align}
         令上式中 $\mathrm{d}w=0$ 得
         \begin{align}
-            \label{1-dx/dz}
+            \label{1-(dx/dz)w}
             \left(\frac{\partial x}{\partial z}\right)_w=\frac{\left(\frac{\partial w}{\partial y}\right)_x\left(\frac{\partial f}{\partial z}\right)_{x,y}}{\left(\frac{\partial w}{\partial x}\right)_y\left(\frac{\partial f}{\partial y}\right)_{x,z}-\left(\frac{\partial w}{\partial y}\right)_x\left(\frac{\partial f}{\partial x}\right)_{y,z}}
         \end{align}
-        式 \eqref{1-(dx/dy)w} 与 \eqref{1-dy/dz} 相乘恰好等于式 \eqref{1-dx/dz}，
+        式 \eqref{1-(dx/dy)w} 与 \eqref{1-(dy/dz)w} 相乘恰好等于式 \eqref{1-(dx/dz)w}，
         \begin{align}
             \left(\frac{\partial x}{\partial y}\right)_w\left(\frac{\partial y}{\partial z}\right)_w=\frac{\left(\frac{\partial w}{\partial y}\right)_x\left(\frac{\partial f}{\partial z}\right)_{x,y}}{\left(\frac{\partial w}{\partial x}\right)_y\left(\frac{\partial f}{\partial y}\right)_{x,z}-\left(\frac{\partial w}{\partial y}\right)_x\left(\frac{\partial f}{\partial x}\right)_{y,z}}=\left(\frac{\partial x}{\partial z}\right)_w,
         \end{align}
