Add figure for A2 P3.

--- a/Assignment-2/Assignment-2.tex
+++ b/Assignment-2/Assignment-2.tex
@@ -88,6 +88,10 @@
         \item[1)] 证明此热机循环的效率不可能超过可逆循环的效率.
         \item[2)] 证明可逆热机的效率不可能超过工作于最高和最低温度，$T_{\max}$ 和 $T_{\min}$，之间的 Carnot 热机效率.
     \end{itemize}
+    \begin{figure}[h]
+        \centering
+        \includegraphics[width=.4\columnwidth]{A2-P3.png}
+    \end{figure}
 \end{prob}
 \begin{pf}
     \begin{itemize}
