--- a/Assignment-1/Assignment-1.tex
+++ b/Assignment-1/Assignment-1.tex
@@ -1,5 +1,5 @@
 \documentclass{assignment}
-\ProjectInfos{高等热力学与统计物理}{PHYS2110}{2020-2021学年第二学期}{习题 I}{截止时间：2021. . （周二）}{陈稼霖}{45875852}
+\ProjectInfos{高等热力学与统计物理}{PHYS2110}{2020-2021学年第二学期}{习题 I}{截止时间：2021. 3. 9（周二）}{陈稼霖}{45875852}
 
 \begin{document}
 \begin{prob}
