--- a/Assignment-3/Assignment-3.tex
+++ b/Assignment-3/Assignment-3.tex
@@ -7,7 +7,7 @@
     \[
         \ln N!=N(\ln N-1)+O(\ln N)
     \]
-    其中 $O(\ln N)$ 表示误差与 $\ln N$ 同阶. （一个简单的证明方法是考虑用矩形法近似积分 $\ln_1^N\mathrm{d}x\,\ln x$.）
+    其中 $O(\ln N)$ 表示误差与 $\ln N$ 同阶. （一个简单的证明方法是考虑用矩形法近似积分 $\int_1^N\mathrm{d}x\,\ln x$.）
 \end{prob}
 \begin{pf}
     
