--- a/Assignment-4/Assignment-4.tex
+++ b/Assignment-4/Assignment-4.tex
@@ -10,7 +10,45 @@
     \end{itemize}
 \end{prob}
 \begin{sol}
-    
+    \begin{itemize}
+        \item[1)] 电子属于 Fermion，按照自由 Fermi 气体模型，传导电子的数密度可用 Fermi 波矢表示，
+        \begin{align}
+            \rho=\frac{\omega K_F^3}{6\pi^2},
+        \end{align}
+        其中金属钠中的传导电子数密度 $\rho=\frac{N}{V}=\frac{N_A}{M_{\text{Na}}/\rho_m}=\frac{6.02\times 10^{23}\text{ mol}^{-1}}{(22.99\text{ g}\cdot\text{mol}^{-1})/(0.97\times 10^6\text{ g}\cdot\text{m}^{-3})}=2.540\times 10^{28}\text{m}^{-3}$，传导电子的各能级的简并度 $\omega=2$，故得 Fermi 波矢为
+        \begin{align}
+            K_F=9.09\times 10^9\text{ m}^{-1}.
+        \end{align}
+        Fermi 速度为
+        \begin{align}
+            v_F=\frac{\hbar K_F}{m}=6.62\times 10^6\text{ m}\cdot\text{s}^{-1},
+        \end{align}
+        其中电子的质量 $m=9.11\times 10^{-31}$ kg. Fermi 能量为
+        \begin{align}
+            \varepsilon_F=\frac{\hbar^2K_F^2}{2m}=5.05\times 10^{-19}\text{ J}=3.16\text{ eV}.
+        \end{align}
+        Fermi 温度为
+        \begin{align}
+            T_F=\frac{\varepsilon_F}{k}=3.66\times 10^4\text{ K}.
+        \end{align}
+        \item[2)] 太阳的质量为 $m_{\odot}=1.989\times 10^{30}$ kg，太阳的半径为 $r_{\odot}=6.6934\times 10^8$ m，该白矮星的质量密度为 $\rho_m=\frac{m}{V}=\frac{0.98m_{\odot}}{\frac{4}{3}\pi(0.0084r_{\odot})^3}=2.62\times 10^9\text{ kg}\cdot\text{m}^{-3}$. 假设白矮星中电子全部从原子内挤出，每个氦原子挤出 $\chi=2$ 个电子，白矮星的电子数密度为 $\rho=\frac{\chi N_A}{M_{\text{He}}/\rho_m}=\frac{2\times 6.02\times 10^{23}\text{ mol}^{-1}}{(4.00\times 10^{-3}\text{ kg}\cdot\text{mol}^{-1})/(2.62\times 10^9\text{ kg}\cdot\text{m}^{-3})}=7.89\times 10^{35}\text{ m}^{-3}$.
+        对于氦原子Fermi 波矢为
+        \begin{align}
+            K_F=\left(\frac{6\pi^2\rho}{\omega}\right)^{1/3}=2.86\times 10^{12}\text{ m}^{-1}.
+        \end{align}
+        Fermi 能量为
+        \begin{align}
+            \varepsilon_F=c\sqrt{p_F^2+m^2c^2}-mc^2=c\sqrt{\hbar^2k_F^2+m^2c^2}-mc^2=4.01\times 10^{-14}\text{ J}=2.51\times 10^5\text{ eV}.
+        \end{align}
+        Fermi 速度为
+        \begin{align}
+            v_F=\frac{p_Fc^2}{\varepsilon_F^2+mc^2}=\frac{c^2\hbar K_F}{\varepsilon_F+mc^2}=2.22\times 10^8\text{ m}\cdot\text{s}^{-1}.
+        \end{align}
+        Fermi 温度为
+        \begin{align}
+            T_F=\frac{\varepsilon_F}{k}=2.91\times 10^9\text{ K}.
+        \end{align}
+    \end{itemize}
 \end{sol}
 
 \begin{prob}
