--- a/Assignment-5/Assignment-5.tex
+++ b/Assignment-5/Assignment-5.tex
@@ -12,7 +12,43 @@
     \end{gather*}
 \end{prob}
 \begin{pf}
-    
+    辐射场即光子气体，光子是玻色子，达到平衡后遵从玻色分布. 由于容器壁不断发射和吸收光子，光子数不守恒，在导出其分布时，不存在对总粒子数的约束条件，故仅有一个拉格朗日乘子，自由能 $\mu=0$. 辐射场的巨配分函数为
+    \begin{align}
+        \mathcal{Q}=\prod_{\alpha}\sum_{n_{\alpha}=1}^{\infty}e^{-\beta n_{\alpha}\varepsilon_{\alpha}}=\prod_{\alpha}\frac{1}{1-e^{-\beta\varepsilon_{\alpha}}}.
+    \end{align}
+    光子的能量可表为
+    \begin{align}
+        \varepsilon=cp=c\hbar K.
+    \end{align}
+    考虑到光子的自旋量子数为 $1$，自旋在动量方向的投影可取 $\pm\hbar$ 两个值，相当于左右圆偏振，对光子所有状态的求和可表为
+    \begin{align}
+        \notag V\int_0^{\infty}\mathrm{d}\varepsilon\,D(\varepsilon)(\cdots)=&2V\int\frac{\mathrm{d}^3\vec{K}}{(2\pi)^3}(\cdots)=\frac{2V}{(2\pi)^3}\int_0^{2\pi}\mathrm{d}\varphi\int_0^{\pi}\sin\theta\,\mathrm{d}\theta\int_0^{\infty}\mathrm{d}K\,K^2(\cdots)\\
+        =&\frac{V}{\pi^2}\int_0^{\infty}\mathrm{d}K\,K^2(\cdots)=\frac{V}{\pi^2\hbar^3c^3}\int_0^{\infty}\mathrm{d}\varepsilon\,\varepsilon^2(\cdots)
+    \end{align}
+    从而得到态密度
+    \begin{align}
+        D(\varepsilon)=\frac{\varepsilon^2}{\pi^2\hbar^3c^3}.
+    \end{align}
+    内能为
+    \begin{align}
+        \notag E=&-\left(\frac{\partial}{\partial\beta}\ln\mathcal{Q}\right)=\sum_{\alpha}\frac{\varepsilon_{\alpha}}{e^{\beta\varepsilon_{\alpha}}-1}=V\int_0^{\infty}\mathrm{d}\varepsilon\frac{D(\varepsilon)\varepsilon}{e^{\beta\varepsilon}-1}=\frac{V}{\pi^2\hbar^3c^3}\int_0^{\infty}\mathrm{d}\varepsilon\frac{\varepsilon^3}{e^{\beta\varepsilon}-1}\\
+        \notag&(\text{令 }x=\beta\varepsilon=\frac{\varepsilon}{kT})\\
+        =&\frac{V(kT)^4}{\pi^2\hbar^3c^3}\int_0^{\infty}\mathrm{d}x\frac{x^3}{e^x-1}=\frac{V(kT)^4}{\pi^2\hbar^3c^3}\times\frac{\pi^4}{15}=V\frac{\pi^2(kT)^4}{15(\hbar c)^3}.
+    \end{align}
+    压强为
+    \begin{align}
+        \notag P=&\frac{kT\ln Q}{V}=\frac{kT}{V}\sum_{\alpha}\ln\left(\frac{1}{1-e^{-\beta\varepsilon_{\alpha}}}\right)=-kT\int_0^{\infty}\mathrm{d}\varepsilon\,D(\varepsilon)\ln(1-e^{-\beta\varepsilon})=-\frac{kT}{\pi^2\hbar^3c^3}\int_0^{\infty}\mathrm{d}\varepsilon\,\varepsilon^2\ln(1-e^{-\beta\varepsilon})\\
+        \notag=&-\frac{kT}{\pi^2\hbar^3c^3}\int_0^{\infty}\ln(1-e^{-\beta\varepsilon})\,\mathrm{d}\left(\frac{\varepsilon^3}{3}\right)=-\frac{kT}{\pi^2\hbar^3c^3}\frac{1}{3}\left\{\left.\left[\varepsilon^3\ln(1-e^{-\beta\varepsilon})\right]\right\rvert_0^{\infty}-\int_0^{\infty}\varepsilon^3\,\mathrm{d}\ln(1-e^{-\beta\varepsilon})\right\}\\
+        \notag=&\frac{1}{\pi^2\hbar^3c^3}\frac{1}{3}\int_0^{\infty}\mathrm{d}\varepsilon\frac{\varepsilon^3}{e^{\beta\varepsilon}-1}=\frac{1}{3}\frac{E}{V}.
+    \end{align}
+    熵为
+    \begin{align}
+        S=k(\ln\mathcal{Q}+\beta U)=\frac{PV}{T}+\frac{E}{T}=\frac{4}{3}\frac{E}{T}.
+    \end{align}
+    Helmholtz 自由能为
+    \begin{align}
+        F=U-TS=-\frac{1}{3}E.
+    \end{align}
 \end{pf}
 
 \begin{prob}
